# W-rfelSimulator-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  colored.yaml  normal.yaml  settings.yaml  zerfallsreihe.yaml
.github/: dependabot.yml
.github/workflows/: main.yml
color/: Cargo.toml
color/src/: lib.rs
colored_dice/: Cargo.toml
colored_dice/src/: lib.rs
common/: Cargo.toml
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/src/: lib.rs
crit_dice/: Cargo.toml
crit_dice/src/: lib.rs
decay_series/: Cargo.toml  build.rs
decay_series/src/: operation.rs
dice/: Cargo.toml
dice/colored_dice/: Cargo.toml
dice/colored_dice/src/: lib.rs
dice/crit_dice/: Cargo.toml
dice/crit_dice/src/: lib.rs
dice/normal_dice/: Cargo.toml
dice/normal_dice/src/: lib.rs
dice/src/: lib.rs
disadvantage/: Cargo.toml  disadvantage.yaml
disadvantage/src/: lib.rs
macros/: Cargo.toml
nachteil/: Cargo.toml  advantage.yaml  build.rs
nachteil/src/: lib.rs
normal_dice/: Cargo.toml
normal_dice/src/: lib.rs
schemas/: colored.schema  nachteile.schema  normal.schema  settings.schema  zerfallsreihe.schema
scripts/: postrm.sh
spell/: Cargo.toml
spell/src/: lib.rs
src/: color.rs  colored_dice.rs  disadvantage.rs  macros.rs  main.rs  normal_dice.rs  preferences.rs  spell.rs  tests.rs
src/common/: common.rs  mod.rs
src/decay_series/: mod.rs  operation.rs  state.rs
src/dice/: colored_dice.rs  crit_dice.rs  mod.rs  normal_dice.rs
zauber/: Cargo.toml
zauber/src/: lib.rs
zerfallsreihen/: Cargo.toml  build.rs  zerfallsreihe.yaml
zerfallsreihen/src/: Operation.rs  lib.rs  operation.rs
