[package]
name = "würfeln"
version = "1.2.0"
authors = ["Rafael Sundorf <captn.rafaelh@gmail.com>"]
edition = "2021"
description = "The Dice Simulator for the Goren PnP"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-integer = "1.2.1"
clap = "4.3.21"
dialoguer = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ansi_term = "0.12.1"
dice = { version = "1.0.0", path = "./dice" }
zerfallsreihen = { version = "1.0.0", path = "./zerfallsreihen" }
common = { version = "1.0.0", path = "./common" }
zauber = { version = "1.0.0", path = "./zauber" }
nachteil = { version = "1.0.0", path = "./nachteil"}
color = { version = "1.0.0", path = "./color" }

[package.metadata.deb]
copyright = "No Copyright"
maintainer-scripts = "scripts"
priority = "optional"
section = "misc"
extended-description = "The Dice Simulator for the Goren PnP"
license-file = "LICENSE"
name = "wuerfeln"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"