[package]
name = "würfeln"
version = "1.3.0"
authors = ["Rafael Sundorf <captn.rafaelh@gmail.com>"]
edition = "2024"
description = "The Dice Simulator for the Goren PnP"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.21"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ansi_term = "0.12.1"
dice = { version = "1.0.0", path = "./dice" }
decay_series = { version = "1.0.0", path = "./decay_series" }
common = { version = "1.0.0", path = "./common" }
spell = { version = "1.0.0", path = "./spell" }
disadvantage = { version = "1.0.0", path = "./disadvantage" }
color = { version = "1.0.0", path = "./color" }

[package.metadata.deb]
copyright = "No Copyright"
maintainer-scripts = "scripts"
priority = "optional"
section = "misc"
extended-description = "The Dice Simulator for the Goren PnP"
license-file = "LICENSE"
name = "wuerfeln"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"