[package]
name = "würfeln"
version = "1.3.0"
authors = ["Rafael Sundorf <captn.rafaelh@gmail.com>"]
edition = "2024"
description = "The Dice Simulator for the Goren PnP"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.52"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ansi_term = "0.12.1"
random-integer = "1.2.1"
random-number = "0.1.9"
directories = "6.0.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[package.metadata.deb]
copyright = "No Copyright"
maintainer-scripts = "scripts"
priority = "optional"
section = "misc"
extended-description = "The Dice Simulator for the Goren PnP"
license-file = "LICENSE"
name = "wuerfeln"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"