[package]
name = "decay_series"
authors = ["Rafael Sundorf"]
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
common = { version = "1.0.0", path = "../common" }
ansi_term = "0.12.1"

[build-dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
