[package]
name = "nachteil"
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "1.0.0", path = "../common" }
random-integer = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[build-dependencies]
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
