[package]
name = "colored_dice"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-integer = "1.2.1"
serde = "1.0.130"
serde_yaml = "0.8.21"
ansi_term = "0.12.1"
common = { version = "1.0.0", path = "../../common" }