[package]
name = "crit_dice"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-integer = "1.2.1"
random-number = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
macros = { version = "1.0.0", path = "../../macros" }
common = { version = "1.0.0", path = "../../common" }